--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,9 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, "Noto Sans JP", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
 * {
   box-sizing: border-box;
+}
+
+html {
+  font-family: "Noto Sans JP", sans-serif;
 }
 
 body {
